--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/The-Important-Entity/backend-landing#readme",
   "dependencies": {
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
